Fixed background color and sidebar stretch

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,8 @@
 .sidebar {
   color: whitesmoke;
   background-color: rgb(0, 0, 0);
-  height: 100vh;
+  margin-bottom: -101%;
+  padding-bottom: 101%;
   display: flex;
   justify-content: start;
   align-items: flex-start;
